[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/startscreen/442137-hollywood-wallpaper-top-free-hollywood-background.jpg" type="Texture" id=1]
[ext_resource path="res://assets/startscreen/7f02970196dd648330b1491fb862d4ce.jpg" type="Texture" id=2]
[ext_resource path="res://assets/startscreen/silhouette-medieval-background-with-medieval-army-free-vector.jpg" type="Texture" id=3]
[ext_resource path="res://assets/fonts/cyberpunk.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/80's.otf" type="DynamicFontData" id=5]
[ext_resource path="res://assets/fonts/old.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/menu/play-icon-10.png" type="Texture" id=7]
[ext_resource path="res://UIs/StartScreen.gd" type="Script" id=8]
[ext_resource path="res://audio/startingscreen.mp3" type="AudioStream" id=9]
[ext_resource path="res://assets/menu/red x.png" type="Texture" id=10]
[ext_resource path="res://assets/menu/i.png" type="Texture" id=11]
[ext_resource path="res://assets/menu/x.png" type="Texture" id=12]
[ext_resource path="res://assets/menu/i blue.png" type="Texture" id=13]
[ext_resource path="res://assets/menu/play green.png" type="Texture" id=14]

[sub_resource type="DynamicFont" id=1]
size = 68
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=2]
size = 113
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 70
extra_spacing_char = 12
font_data = ExtResource( 4 )

[node name="StartScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )

[node name="1" type="TextureRect" parent="."]
margin_right = 341.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="2" type="TextureRect" parent="."]
margin_left = 341.0
margin_right = 682.0
margin_bottom = 600.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="3" type="TextureRect" parent="."]
margin_left = 682.0
margin_right = 1023.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 7

[node name="journey" type="RichTextLabel" parent="."]
margin_left = 24.0
margin_top = 27.0
margin_right = 317.0
margin_bottom = 165.0
custom_fonts/normal_font = SubResource( 1 )
text = "Journey"

[node name="through" type="RichTextLabel" parent="."]
margin_left = 397.0
margin_top = 16.0
margin_right = 693.0
margin_bottom = 182.0
custom_fonts/normal_font = SubResource( 2 )
text = "Through"

[node name="time" type="RichTextLabel" parent="."]
margin_left = 778.0
margin_top = 33.0
margin_right = 1065.0
margin_bottom = 190.0
custom_fonts/normal_font = SubResource( 3 )
text = "Time
"

[node name="background" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="play" type="TextureButton" parent="."]
margin_left = 461.0
margin_top = 250.0
margin_right = 561.0
margin_bottom = 350.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 7 )
texture_hover = ExtResource( 14 )
expand = true

[node name="instructions" type="TextureButton" parent="."]
margin_left = 120.0
margin_top = 250.0
margin_right = 220.0
margin_bottom = 350.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 11 )
texture_hover = ExtResource( 13 )
expand = true

[node name="quit" type="TextureButton" parent="."]
margin_left = 802.0
margin_top = 250.0
margin_right = 902.0
margin_bottom = 350.0
mouse_default_cursor_shape = 2
texture_normal = ExtResource( 12 )
texture_hover = ExtResource( 10 )
expand = true

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
